tests/snapshots/tokenize__typedef_ulong.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 2:1\nunsigned at 2:9\nlong at 2:18\nIdentifier(size_t) at 2:23\n; at 2:29\nint at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nIdentifier(size_t) at 5:5\nIdentifier(x) at 5:12\n= at 5:14\nIntLiteral(100) at 5:16\n; at 5:19\nreturn at 6:5\n( at 6:12\nint at 6:13\n) at 6:16\nIdentifier(x) at 6:17\n; at 6:18\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
