tests/snapshots/tokenize__typeof.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nIdentifier(assert) at 16:3\n( at 16:9\nIntLiteral(3, None) at 16:10\n, at 16:11\n( at 16:13\n{ at 16:14\nIdentifier(typeof) at 16:16\n( at 16:22\nint at 16:23\n) at 16:26\nIdentifier(x) at 16:28\n= at 16:29\nIntLiteral(3, None) at 16:30\n; at 16:31\nIdentifier(x) at 16:33\n; at 16:34\n} at 16:36\n) at 16:37\n, at 16:38\nStringLiteral(\"({ typeof(int) 3=3; 3; })\") at 16:40\n) at 16:67\n; at 16:68\nIdentifier(assert) at 17:3\n( at 17:9\nIntLiteral(3, None) at 17:10\n, at 17:11\n( at 17:13\n{ at 17:14\nIdentifier(typeof) at 17:16\n( at 17:22\nIntLiteral(1, None) at 17:23\n) at 17:24\nIdentifier(x) at 17:26\n= at 17:27\nIntLiteral(3, None) at 17:28\n; at 17:29\nIdentifier(x) at 17:31\n; at 17:32\n} at 17:34\n) at 17:35\n, at 17:36\nStringLiteral(\"({ typeof(1) 3=3; 3; })\") at 17:38\n) at 17:63\n; at 17:64\nIdentifier(assert) at 18:3\n( at 18:9\nIntLiteral(4, None) at 18:10\n, at 18:11\n( at 18:13\n{ at 18:14\nint at 18:16\nIdentifier(x) at 18:20\n; at 18:21\nIdentifier(typeof) at 18:23\n( at 18:29\nIdentifier(x) at 18:30\n) at 18:31\nIdentifier(y) at 18:33\n; at 18:34\nsizeof at 18:36\n( at 18:42\nIdentifier(y) at 18:43\n) at 18:44\n; at 18:45\n} at 18:47\n) at 18:48\n, at 18:49\nStringLiteral(\"({ int 4; typeof(4) ({ int x; typeof(x) y; sizeof(y); }); sizeof(({ int x; typeof(x) y; sizeof(y); })); })\") at 18:51\n) at 18:159\n; at 18:160\nIdentifier(assert) at 19:3\n( at 19:9\nIntLiteral(8, None) at 19:10\n, at 19:11\n( at 19:13\n{ at 19:14\nint at 19:16\nIdentifier(x) at 19:20\n; at 19:21\nIdentifier(typeof) at 19:23\n( at 19:29\n& at 19:30\nIdentifier(x) at 19:31\n) at 19:32\nIdentifier(y) at 19:34\n; at 19:35\nsizeof at 19:37\n( at 19:43\nIdentifier(y) at 19:44\n) at 19:45\n; at 19:46\n} at 19:48\n) at 19:49\n, at 19:50\nStringLiteral(\"({ int 8; typeof(&8) ({ int x; typeof(&x) y; sizeof(y); }); sizeof(({ int x; typeof(&x) y; sizeof(y); })); })\") at 19:52\n) at 19:163\n; at 19:164\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(4, None) at 20:10\n, at 20:11\n( at 20:13\n{ at 20:14\nIdentifier(typeof) at 20:16\n( at 20:22\nStringLiteral(\"foo\") at 20:23\n) at 20:28\nIdentifier(x) at 20:30\n; at 20:31\nsizeof at 20:33\n( at 20:39\nIdentifier(x) at 20:40\n) at 20:41\n; at 20:42\n} at 20:44\n) at 20:45\n, at 20:46\nStringLiteral(\"({ typeof(\") at 20:48\nIdentifier(foo) at 20:60\nStringLiteral(\") 4; sizeof(4); })\") at 20:63\n) at 20:83\n; at 20:84\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(12, None) at 21:10\n, at 21:12\nsizeof at 21:14\n( at 21:20\nIdentifier(typeof) at 21:21\n( at 21:27\nstruct at 21:28\n{ at 21:35\nint at 21:37\nIdentifier(a) at 21:41\n, at 21:42\nIdentifier(b) at 21:43\n, at 21:44\nIdentifier(c) at 21:45\n; at 21:46\n} at 21:48\n) at 21:49\n) at 21:50\n, at 21:51\nStringLiteral(\"sizeof(typeof(struct { int a,b,c; }))\") at 21:53\n) at 21:92\n; at 21:93\nIdentifier(printf) at 23:3\n( at 23:9\nStringLiteral(\"OK\n\") at 23:10\n) at 23:16\n; at 23:17\nreturn at 24:3\nIntLiteral(0, None) at 24:10\n; at 24:11\n} at 25:1\nEOF at 26:1\n"
stderr: ""
status: 0
