tests/snapshots/tokenize__unary_plus.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nchar at 2:5\nIdentifier(c) at 2:10\n= at 2:12\n- at 2:14\nIntLiteral(5, None) at 2:15\n; at 2:16\nunsigned at 3:5\nchar at 3:14\nIdentifier(uc) at 3:19\n= at 3:22\nIntLiteral(200, None) at 3:24\n; at 3:27\nshort at 4:5\nIdentifier(s) at 4:11\n= at 4:13\n- at 4:15\nIntLiteral(12, None) at 4:16\n; at 4:18\nint at 5:5\nIdentifier(x) at 5:9\n= at 5:11\nIntLiteral(7, None) at 5:13\n; at 5:14\nif at 7:5\n( at 7:8\n+ at 7:9\nIdentifier(c) at 7:10\n!= at 7:12\n- at 7:15\nIntLiteral(5, None) at 7:16\n) at 7:17\nreturn at 7:19\nIntLiteral(1, None) at 7:26\n; at 7:27\nif at 8:5\n( at 8:8\n+ at 8:9\nIdentifier(uc) at 8:10\n!= at 8:13\nIntLiteral(200, None) at 8:16\n) at 8:19\nreturn at 8:21\nIntLiteral(2, None) at 8:28\n; at 8:29\nif at 9:5\n( at 9:8\n+ at 9:9\nIdentifier(s) at 9:10\n!= at 9:12\n- at 9:15\nIntLiteral(12, None) at 9:16\n) at 9:18\nreturn at 9:20\nIntLiteral(3, None) at 9:27\n; at 9:28\nif at 10:5\n( at 10:8\n+ at 10:9\nIdentifier(x) at 10:10\n!= at 10:12\nIntLiteral(7, None) at 10:15\n) at 10:16\nreturn at 10:18\nIntLiteral(4, None) at 10:25\n; at 10:26\nif at 12:5\n( at 12:8\nsizeof at 12:9\n( at 12:15\n+ at 12:16\nIdentifier(c) at 12:17\n) at 12:18\n!= at 12:20\nsizeof at 12:23\n( at 12:29\nint at 12:30\n) at 12:33\n) at 12:34\nreturn at 12:36\nIntLiteral(5, None) at 12:43\n; at 12:44\nif at 13:5\n( at 13:8\nsizeof at 13:9\n( at 13:15\n+ at 13:16\nIdentifier(uc) at 13:17\n) at 13:19\n!= at 13:21\nsizeof at 13:24\n( at 13:30\nint at 13:31\n) at 13:34\n) at 13:35\nreturn at 13:37\nIntLiteral(6, None) at 13:44\n; at 13:45\nif at 14:5\n( at 14:8\nsizeof at 14:9\n( at 14:15\n+ at 14:16\nIdentifier(s) at 14:17\n) at 14:18\n!= at 14:20\nsizeof at 14:23\n( at 14:29\nint at 14:30\n) at 14:33\n) at 14:34\nreturn at 14:36\nIntLiteral(7, None) at 14:43\n; at 14:44\nreturn at 16:5\nIntLiteral(0, None) at 16:12\n; at 16:13\n} at 17:1\nEOF at 18:1\n"
stderr: ""
status: 0
