tests/snapshots/tokenize__undef.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nint at 4:5\nIdentifier(x) at 4:9\n= at 4:11\nIntLiteral(10, None) at 4:13\n; at 4:15\nint at 7:5\nIdentifier(y) at 7:9\n= at 7:11\nIntLiteral(20, None) at 7:13\n; at 7:15\nint at 11:5\nIdentifier(z) at 11:9\n= at 11:11\nIntLiteral(30, None) at 11:13\n; at 11:15\nreturn at 13:5\nIdentifier(x) at 13:12\n+ at 13:14\nIdentifier(y) at 13:16\n+ at 13:18\nIdentifier(z) at 13:20\n; at 13:21\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
