tests/snapshots/tokenize__unsigned_compare.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nunsigned at 2:5\nint at 2:14\nIdentifier(a) at 2:18\n= at 2:20\nIntLiteral(0, None) at 2:22\n; at 2:23\nunsigned at 3:5\nint at 3:14\nIdentifier(b) at 3:18\n= at 3:20\nIntLiteral(1, None) at 3:22\n; at 3:23\nif at 4:5\n( at 4:8\nIdentifier(a) at 4:9\n< at 4:11\nIdentifier(b) at 4:13\n) at 4:14\n{ at 4:16\nreturn at 5:9\nIntLiteral(1, None) at 5:16\n; at 5:17\n} at 6:5\nreturn at 7:5\nIntLiteral(0, None) at 7:12\n; at 7:13\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
