tests/snapshots/tokenize__usualconv.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nstatic at 25:1\nint at 25:8\nIdentifier(ret10) at 25:12\n( at 25:17\nvoid at 25:18\n) at 25:22\n{ at 25:24\nreturn at 25:26\nIntLiteral(10, None) at 25:33\n; at 25:35\n} at 25:37\nint at 27:1\nIdentifier(main) at 27:5\n( at 27:9\n) at 27:10\n{ at 27:12\nIdentifier(assert) at 28:3\n( at 28:9\n( at 28:10\nlong at 28:11\n) at 28:15\n- at 28:16\nIntLiteral(5, None) at 28:17\n, at 28:18\n- at 28:20\nIntLiteral(10, None) at 28:21\n+ at 28:24\n( at 28:26\nlong at 28:27\n) at 28:31\nIntLiteral(5, None) at 28:32\n, at 28:33\nStringLiteral(\"-10 + (long)5\") at 28:35\n) at 28:50\n; at 28:51\nIdentifier(assert) at 29:3\n( at 29:9\n( at 29:10\nlong at 29:11\n) at 29:15\n- at 29:16\nIntLiteral(15, None) at 29:17\n, at 29:19\n- at 29:21\nIntLiteral(10, None) at 29:22\n- at 29:25\n( at 29:27\nlong at 29:28\n) at 29:32\nIntLiteral(5, None) at 29:33\n, at 29:34\nStringLiteral(\"-10 - (long)5\") at 29:36\n) at 29:51\n; at 29:52\nIdentifier(assert) at 30:3\n( at 30:9\n( at 30:10\nlong at 30:11\n) at 30:15\n- at 30:16\nIntLiteral(50, None) at 30:17\n, at 30:19\n- at 30:21\nIntLiteral(10, None) at 30:22\n* at 30:25\n( at 30:27\nlong at 30:28\n) at 30:32\nIntLiteral(5, None) at 30:33\n, at 30:34\nStringLiteral(\"-10 * (long)5\") at 30:36\n) at 30:51\n; at 30:52\nIdentifier(assert) at 31:3\n( at 31:9\n( at 31:10\nlong at 31:11\n) at 31:15\n- at 31:16\nIntLiteral(2, None) at 31:17\n, at 31:18\n- at 31:20\nIntLiteral(10, None) at 31:21\n/ at 31:24\n( at 31:26\nlong at 31:27\n) at 31:31\nIntLiteral(5, None) at 31:32\n, at 31:33\nStringLiteral(\"-10 / (long)5\") at 31:35\n) at 31:50\n; at 31:51\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(1, None) at 33:10\n, at 33:11\n- at 33:13\nIntLiteral(2, None) at 33:14\n< at 33:16\n( at 33:18\nlong at 33:19\n) at 33:23\n- at 33:24\nIntLiteral(1, None) at 33:25\n, at 33:26\nStringLiteral(\"-2 < (long)-1\") at 33:28\n) at 33:43\n; at 33:44\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(1, None) at 34:10\n, at 34:11\n- at 34:13\nIntLiteral(2, None) at 34:14\n<= at 34:16\n( at 34:19\nlong at 34:20\n) at 34:24\n- at 34:25\nIntLiteral(1, None) at 34:26\n, at 34:27\nStringLiteral(\"-2 <= (long)-1\") at 34:29\n) at 34:45\n; at 34:46\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(0, None) at 35:10\n, at 35:11\n- at 35:13\nIntLiteral(2, None) at 35:14\n> at 35:16\n( at 35:18\nlong at 35:19\n) at 35:23\n- at 35:24\nIntLiteral(1, None) at 35:25\n, at 35:26\nStringLiteral(\"-2 > (long)-1\") at 35:28\n) at 35:43\n; at 35:44\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(0, None) at 36:10\n, at 36:11\n- at 36:13\nIntLiteral(2, None) at 36:14\n>= at 36:16\n( at 36:19\nlong at 36:20\n) at 36:24\n- at 36:25\nIntLiteral(1, None) at 36:26\n, at 36:27\nStringLiteral(\"-2 >= (long)-1\") at 36:29\n) at 36:45\n; at 36:46\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(1, None) at 38:10\n, at 38:11\n( at 38:13\nlong at 38:14\n) at 38:18\n- at 38:19\nIntLiteral(2, None) at 38:20\n< at 38:22\n- at 38:24\nIntLiteral(1, None) at 38:25\n, at 38:26\nStringLiteral(\"(long)-2 < -1\") at 38:28\n) at 38:43\n; at 38:44\nIdentifier(assert) at 39:3\n( at 39:9\nIntLiteral(1, None) at 39:10\n, at 39:11\n( at 39:13\nlong at 39:14\n) at 39:18\n- at 39:19\nIntLiteral(2, None) at 39:20\n<= at 39:22\n- at 39:25\nIntLiteral(1, None) at 39:26\n, at 39:27\nStringLiteral(\"(long)-2 <= -1\") at 39:29\n) at 39:45\n; at 39:46\nIdentifier(assert) at 40:3\n( at 40:9\nIntLiteral(0, None) at 40:10\n, at 40:11\n( at 40:13\nlong at 40:14\n) at 40:18\n- at 40:19\nIntLiteral(2, None) at 40:20\n> at 40:22\n- at 40:24\nIntLiteral(1, None) at 40:25\n, at 40:26\nStringLiteral(\"(long)-2 > -1\") at 40:28\n) at 40:43\n; at 40:44\nIdentifier(assert) at 41:3\n( at 41:9\nIntLiteral(0, None) at 41:10\n, at 41:11\n( at 41:13\nlong at 41:14\n) at 41:18\n- at 41:19\nIntLiteral(2, None) at 41:20\n>= at 41:22\n- at 41:25\nIntLiteral(1, None) at 41:26\n, at 41:27\nStringLiteral(\"(long)-2 >= -1\") at 41:29\n) at 41:45\n; at 41:46\nIdentifier(assert) at 43:3\n( at 43:9\nIntLiteral(0, None) at 43:10\n, at 43:11\nIntLiteral(2147483647, None) at 43:13\n+ at 43:24\nIntLiteral(2147483647, None) at 43:26\n+ at 43:37\nIntLiteral(2, None) at 43:39\n, at 43:40\nStringLiteral(\"2147483647 + 2147483647 + 2\") at 43:42\n) at 43:71\n; at 43:72\nIdentifier(assert) at 44:3\n( at 44:9\n( at 44:10\nlong at 44:11\n) at 44:15\n- at 44:16\nIntLiteral(1, None) at 44:17\n, at 44:18\n( at 44:20\n{ at 44:21\nlong at 44:23\nIdentifier(x) at 44:28\n; at 44:29\nIdentifier(x) at 44:31\n= at 44:32\n- at 44:33\nIntLiteral(1, None) at 44:34\n; at 44:35\nIdentifier(x) at 44:37\n; at 44:38\n} at 44:40\n) at 44:41\n, at 44:42\nStringLiteral(\"({ long (long)-1; (long)-1=-1; (long)-1; })\") at 44:44\n) at 44:89\n; at 44:90\nIdentifier(assert) at 46:3\n( at 46:9\nIntLiteral(1, None) at 46:10\n, at 46:11\n( at 46:13\n{ at 46:14\nchar at 46:16\nIdentifier(x) at 46:21\n[ at 46:22\nIntLiteral(3, None) at 46:23\n] at 46:24\n; at 46:25\nIdentifier(x) at 46:27\n[ at 46:28\nIntLiteral(0, None) at 46:29\n] at 46:30\n= at 46:31\nIntLiteral(0, None) at 46:32\n; at 46:33\nIdentifier(x) at 46:35\n[ at 46:36\nIntLiteral(1, None) at 46:37\n] at 46:38\n= at 46:39\nIntLiteral(1, None) at 46:40\n; at 46:41\nIdentifier(x) at 46:43\n[ at 46:44\nIntLiteral(2, None) at 46:45\n] at 46:46\n= at 46:47\nIntLiteral(2, None) at 46:48\n; at 46:49\nchar at 46:51\n* at 46:56\nIdentifier(y) at 46:57\n= at 46:58\nIdentifier(x) at 46:59\n+ at 46:60\nIntLiteral(1, None) at 46:61\n; at 46:62\nIdentifier(y) at 46:64\n[ at 46:65\nIntLiteral(0, None) at 46:66\n] at 46:67\n; at 46:68\n} at 46:70\n) at 46:71\n, at 46:72\nStringLiteral(\"({ char 1[3]; 1[0]=0; 1[1]=1; 1[2]=2; char *({ char x[3]; x[0]=0; x[1]=1; x[2]=2; char *y=x+1; y[0]; })=1+1; ({ char x[3]; x[0]=0; x[1]=1; x[2]=2; char *y=x+1; y[0]; })[0]; })\") at 46:74\n) at 46:251\n; at 46:252\nIdentifier(assert) at 47:3\n( at 47:9\nIntLiteral(0, None) at 47:10\n, at 47:11\n( at 47:13\n{ at 47:14\nchar at 47:16\nIdentifier(x) at 47:21\n[ at 47:22\nIntLiteral(3, None) at 47:23\n] at 47:24\n; at 47:25\nIdentifier(x) at 47:27\n[ at 47:28\nIntLiteral(0, None) at 47:29\n] at 47:30\n= at 47:31\nIntLiteral(0, None) at 47:32\n; at 47:33\nIdentifier(x) at 47:35\n[ at 47:36\nIntLiteral(1, None) at 47:37\n] at 47:38\n= at 47:39\nIntLiteral(1, None) at 47:40\n; at 47:41\nIdentifier(x) at 47:43\n[ at 47:44\nIntLiteral(2, None) at 47:45\n] at 47:46\n= at 47:47\nIntLiteral(2, None) at 47:48\n; at 47:49\nchar at 47:51\n* at 47:56\nIdentifier(y) at 47:57\n= at 47:58\nIdentifier(x) at 47:59\n+ at 47:60\nIntLiteral(1, None) at 47:61\n; at 47:62\nIdentifier(y) at 47:64\n[ at 47:65\n- at 47:66\nIntLiteral(1, None) at 47:67\n] at 47:68\n; at 47:69\n} at 47:71\n) at 47:72\n, at 47:73\nStringLiteral(\"({ char 0[3]; 0[0]=0; 0[1]=1; 0[2]=2; char *({ char x[3]; x[0]=0; x[1]=1; x[2]=2; char *y=x+1; y[-1]; })=0+1; ({ char x[3]; x[0]=0; x[1]=1; x[2]=2; char *y=x+1; y[-1]; })[-1]; })\") at 47:75\n) at 47:255\n; at 47:256\nIdentifier(assert) at 48:3\n( at 48:9\nIntLiteral(5, None) at 48:10\n, at 48:11\n( at 48:13\n{ at 48:14\nstruct at 48:16\nIdentifier(t) at 48:23\n{ at 48:25\nchar at 48:26\nIdentifier(a) at 48:31\n; at 48:32\n} at 48:33\nIdentifier(x) at 48:35\n, at 48:36\nIdentifier(y) at 48:38\n; at 48:39\nIdentifier(x) at 48:41\n. at 48:42\nIdentifier(a) at 48:43\n= at 48:44\nIntLiteral(5, None) at 48:45\n; at 48:46\nIdentifier(y) at 48:48\n= at 48:49\nIdentifier(x) at 48:50\n; at 48:51\nIdentifier(y) at 48:53\n. at 48:54\nIdentifier(a) at 48:55\n; at 48:56\n} at 48:58\n) at 48:59\n, at 48:60\nStringLiteral(\"({ struct t {char a;} 5, ({ struct t {char a;} x, y; x.a=5; y=x; y.a; }); 5.a=5; ({ struct t {char a;} x, y; x.a=5; y=x; y.a; })=5; ({ struct t {char a;} x, y; x.a=5; y=x; y.a; }).a; })\") at 48:62\n) at 48:249\n; at 48:250\nIdentifier(assert) at 50:3\n( at 50:9\nIntLiteral(10, None) at 50:10\n, at 50:12\n( at 50:14\nIntLiteral(1, None) at 50:15\n? at 50:17\nIdentifier(ret10) at 50:19\n: at 50:25\n( at 50:27\nvoid at 50:28\n* at 50:33\n) at 50:34\nIntLiteral(0, None) at 50:35\n) at 50:36\n( at 50:37\n) at 50:38\n, at 50:39\nStringLiteral(\"(1 ? ret10 : (void *)0)()\") at 50:41\n) at 50:68\n; at 50:69\nIdentifier(printf) at 52:3\n( at 52:9\nStringLiteral(\"OK\n\") at 52:10\n) at 52:16\n; at 52:17\nreturn at 53:3\nIntLiteral(0, None) at 53:10\n; at 53:11\n} at 54:1\nEOF at 55:1\n"
stderr: ""
status: 0
